--- a/car.css
+++ b/car.css
@@ -28,7 +28,7 @@ canvas {
   width: 8px;
   height: 16px;
   border-radius: 2px;
-  background-color: #0066ff;
+  background-color: #555;
 }
 
 .car.red {
