Use fixed gameboard and scrolling

--- a/car.css
+++ b/car.css
@@ -14,11 +14,10 @@ canvas {
 
 .scene {
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  width: 1500px;
+  height: 1500px;
   overflow: hidden;
+  box-shadow: inset 0 0 0 1px #ccc;
 }
 
 .car {
