--- a/car.css
+++ b/car.css
@@ -63,13 +63,13 @@ canvas {
 }
 
 .buttons {
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
 }
 
 .bottomleft {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   padding: .5rem;
@@ -107,7 +107,7 @@ canvas {
   margin-left: .5rem;
 }
 .points {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 5rem;
   text-align: right;
