--- a/car.css
+++ b/car.css
@@ -1,6 +1,6 @@
 body {
   overflow: hidden;
-  background-color: #eee;
+  background-color: #ddd;
   font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Ubuntu, roboto, noto, arial, sans-serif;
   touch-action: none;
   user-select: none;
@@ -10,6 +10,16 @@ canvas {
   position: absolute;
   top: 0;
   left: 0;
+  background-color: #eee;
+}
+
+.wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
 }
 
 .scene {
@@ -17,7 +27,6 @@ canvas {
   width: 1500px;
   height: 1500px;
   overflow: hidden;
-  box-shadow: inset 0 0 0 1px #ccc;
 }
 
 .car {
