--- a/car.css
+++ b/car.css
@@ -4,6 +4,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Ubuntu, roboto, noto, arial, sans-serif;
   touch-action: none;
   user-select: none;
+  -webkit-user-select: none;
 }
 
 canvas {
